# noshow-iq-60000

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  smoke_test.py  train.py
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  index.rst  make.bat
models/: noshow_model.joblib
noshow_iq/: api.py  model.py  preprocess.py
tests/: conftest.py  test_api.py
