[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noshowiq60000"
version = "0.1.0"
description = "Patient appointment no-show prediction API"
requires-python = ">=3.11"
dependencies = [
    "fastapi", "uvicorn", "pymongo", "pandas",
    "scikit-learn", "imbalanced-learn", "joblib==1.5.3",
    "python-dotenv", "pydantic",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["noshow_iq*"]